--- a/Static Frontend/index.html
+++ b/Static Frontend/index.html
@@ -35,6 +35,9 @@
                         <a class="nav-link" aria-current="page" href="#features">Features</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#faq">FAQs</a>
                     </li>
                 </ul>
@@ -141,6 +144,35 @@
             </div>
         </div>
     </section>
+
+    <section id="about" class="bg-white py-5 my-4">
+      <div class="container">
+        <h2 class="section-title text-center display-5 mb-1">About ViroShield</h2>
+        <div class="row g-5">
+          <div class="col-lg-7">
+              <p class="about-desc mt-3 mb-5 fs-5 text-secondary">ViroShield is dedicated to using the power of Big Data to anticipate, safeguard, and mitigate viral threats. We empower individuals with the insights needed to make informed decisions about their health.</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="about-card">
+                            <h3 class="about-card-title">Advanced Data Analytics</h3>
+                            <p class="about-card-desc text-secondary">Our platform leverages state-of-the-art data analytics techniques to analyze trends, patterns, and historical data related to viral outbreaks. We transform raw data into actionable insights.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="about-card">
+                            <h3 class="about-card-title">Real-time Updates</h3>
+                            <p class="about-card-desc text-secondary">Stay informed with real-time updates on the rise of viral cases and health issues. Our dashboard provides visualizations and predictions to keep you aware and safe.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-5 text-end">
+                <img id="about-img" src="./assets/images/about.png" class="img-fluid" alt="ViroShield">
+            </div>
+        </div>
+      </div>
+  </section>
+  
     <section id="faq" class="py-5 my-5">
       <div class="container">
           <h2 class="section-title text-center display-5">Frequently Asked Questions</h2>
