--- a/Admin UI/admin.html
+++ b/Admin UI/admin.html
@@ -45,129 +45,6 @@
                     <span>Dashboard</span></a>
             </li>
 
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Admin Info
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <i class="fas fa-book-open"></i>
-                    <span>Curriculam</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <i class="far fa-calendar-alt"></i>
-                    <span>Semesters</span></a>
-            </li>
-
-            <!-- Nav Item - Utilities Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFaculty"
-                    aria-expanded="true" aria-controls="collapseFaculty">
-                    <i class="fas fa-chalkboard-teacher"></i>
-                    <span>Faculty</span>
-                </a>
-                <div id="collapseFaculty" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Faculty:</h6>
-                        <a class="collapse-item" href="#">Add Faculty</a>
-                        <a class="collapse-item" href="#">View Faculty</a>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseBatch"
-                    aria-expanded="true" aria-controls="collapseBatch">
-                    <i class="fas fa-user-friends"></i>
-                    <span>Batch</span>
-                </a>
-                <div id="collapseBatch" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Batch:</h6>
-                        <a class="collapse-item" href="#">Add Batch</a>
-                        <a class="collapse-item" href="#">View Batch</a>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStudent"
-                    aria-expanded="true" aria-controls="collapseStudent">
-                    <i class="fas fa-book-reader"></i>
-                    <span>Student</span>
-                </a>
-                <div id="collapseStudent" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Student:</h6>
-                        <a class="collapse-item" href="#">Add Student</a>
-                        <a class="collapse-item" href="#">View Student</a>
-                    </div>
-                </div>
-            </li>
-
-            <!-- Divider -->
-            <hr class="sidebar-divider">
-
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Exam Details
-            </div>
-
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseEInfo"
-                    aria-expanded="true" aria-controls="collapseEInfo">
-                    <i class="fas fa-book-open"></i>
-                    <span>Exam Info</span>
-                </a>
-                <div id="collapseEInfo" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Exam Info:</h6>
-                        <a class="collapse-item" href="#">Add Exam</a>
-                        <a class="collapse-item" href="#">View Exam</a>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseQuestion"
-                    aria-expanded="true" aria-controls="collapseQuestion">
-                    <i class="fas fa-laptop-code"></i>
-                    <span>Question</span>
-                </a>
-                <div id="collapseQuestion" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Question:</h6>
-                        <a class="collapse-item" href="#">Add Questions</a>
-                        <a class="collapse-item" href="#">View Questions</a>
-                    </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseResult"
-                    aria-expanded="true" aria-controls="collapseResult">
-                    <i class="fas fa-user-graduate"></i>
-                    <span>Exam Result</span>
-                </a>
-                <div id="collapseResult" class="collapse" aria-labelledby="headingUtilities"
-                    data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Student:</h6>
-                        <a class="collapse-item" href="#">Add Result</a>
-                        <a class="collapse-item" href="#">View Result</a>
-                    </div>
-                </div>
-            </li>
-            <!-- Divider -->
-            <hr class="sidebar-divider d-none d-md-block">
-
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
                 <button class="rounded-circle border-0" id="sidebarToggle"></button>
@@ -285,8 +162,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                                Exams (December)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">40</div>
+                                                Patients (July)</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">400</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -303,8 +180,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                Exams (2022)</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">215</div>
+                                                Patients (2022)</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">2150</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -320,18 +197,11 @@
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Pending Exams
+                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Countries Affected
                                             </div>
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col-auto">
-                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
-                                                </div>
-                                                <div class="col">
-                                                    <div class="progress progress-sm mr-2">
-                                                        <div class="progress-bar bg-info" role="progressbar"
-                                                            style="width: 50%" aria-valuenow="50" aria-valuemin="0"
-                                                            aria-valuemax="100"></div>
-                                                    </div>
+                                                    <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -350,8 +220,8 @@
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
                                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                                Pending Re-attempts</div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">2</div>
+                                                Cities Affected</div>
+                                            <div class="h5 mb-0 font-weight-bold text-gray-800">200</div>
                                         </div>
                                         <div class="col-auto">
                                             <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
@@ -372,7 +242,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Progress Chart</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Line Chart</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -403,7 +273,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Passing Ratio</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Pie Chart</h6>
                                     <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -426,13 +296,13 @@
                                     </div>
                                     <div class="mt-4 text-center small">
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-primary"></i> eProject
+                                            <i class="fas fa-circle text-primary"></i> A
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-success"></i> Objective
+                                            <i class="fas fa-circle text-success"></i> B
                                         </span>
                                         <span class="mr-2">
-                                            <i class="fas fa-circle text-info"></i> Practical
+                                            <i class="fas fa-circle text-info"></i> C
                                         </span>
                                     </div>
                                 </div>
@@ -449,37 +319,37 @@
                             <!-- Project Card Example -->
                             <div class="card shadow mb-4">
                                 <div class="card-header py-3">
-                                    <h6 class="m-0 font-weight-bold text-primary">Exams Progress</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Regions Affected Most</h6>
                                 </div>
                                 <div class="card-body">
-                                    <h4 class="small font-weight-bold">2206D<span
+                                    <h4 class="small font-weight-bold">USA<span
                                             class="float-right">20%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-danger" role="progressbar" style="width: 20%"
+                                        <div class="progress-bar bg-success" role="progressbar" style="width: 20%"
                                             aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <h4 class="small font-weight-bold">2201A<span
+                                    <h4 class="small font-weight-bold">Singapore<span
                                             class="float-right">40%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 40%"
+                                        <div class="progress-bar bg-info" role="progressbar" style="width: 40%"
                                             aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <h4 class="small font-weight-bold">2101A<span
+                                    <h4 class="small font-weight-bold">Canada<span
                                             class="float-right">60%</span></h4>
                                     <div class="progress mb-4">
                                         <div class="progress-bar" role="progressbar" style="width: 60%"
                                             aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <h4 class="small font-weight-bold">2001D <span
+                                    <h4 class="small font-weight-bold">Pakistan<span
                                             class="float-right">80%</span></h4>
                                     <div class="progress mb-4">
-                                        <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
+                                        <div class="progress-bar bg-warning" role="progressbar" style="width: 80%"
                                             aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
-                                    <h4 class="small font-weight-bold">2010A <span
-                                            class="float-right">Complete!</span></h4>
+                                    <h4 class="small font-weight-bold">Nigeria <span
+                                            class="float-right">90%</span></h4>
                                     <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
+                                        <div class="progress-bar bg-danger" role="progressbar" style="width: 90%"
                                             aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
